@@ -1,3 +1,6 @@
+- Fixed issue #010919: Input validation of all waiting variables before
+  throwing an exception.
+
 1.0beta2 - Thursday 31 May 2007
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
